modules/gdscript/tests/scripts/analyzer/errors/access_level_private_func_subclass.gd
@private

class Foo:
    func foo():
        pass

class Bar extends Foo:
    func bar():
        foo()

func test():
    pass
